Bug 14862 - MacOSX compilation fixes.
Summary: MacOSX compilation fixes.
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: 4.15.0
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-10-13 01:30 UTC by Jeremy Allison
Modified: 2021-10-27 13:12 UTC (History)
1 user (show)

See Also:


Attachments
git-am fix for 4.15.next. (10.87 KB, patch)
2021-10-14 21:34 UTC, Jeremy Allison
abartlet: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jeremy Allison 2021-10-13 01:30:33 UTC
As reported by Alex Richardson <Alexander.Richardson@cl.cam.ac.uk, there are some MacOSX compilation fixes that can be easily back-ported for 4.15.next. Have patch, need bugid.
Comment 1 Samba QA Contact 2021-10-13 02:34:04 UTC
This bug was referenced in samba master:

2564e96e8319b4cb4c987dd2a03cf8a293db985a
d3675e66fe8eec15076c6b88e47b627ee80c6f9e
e4eb1f151011d2bd6a2d39b156663ddd9126d345
6dadf251fc02c2b3237c48d316f5cb8791ab4f76
1d893f723207040c285ed061db3a690099f8c929
99ee7f3d89cce9b07b8ed3f55f7e8e67baed6ee1
fc2347be4ed9a9083a56468ca5e43070059038c5
Comment 2 Samba QA Contact 2021-10-14 19:55:30 UTC
This bug was referenced in samba master:

1d3e118f6f2274a67cdb8141dc8dade0c571c8f5
Comment 3 Jeremy Allison 2021-10-14 21:34:39 UTC
Created attachment 16850 [details]
git-am fix for 4.15.next.

Cherry-picked cleanly from master.
Comment 4 Andrew Bartlett 2021-10-15 01:08:29 UTC
Assigned to Jule for 4.15.next
Comment 5 Jule Anger 2021-10-18 07:26:21 UTC
Pushed to autobuild-v4-15-test.
Comment 6 Samba QA Contact 2021-10-18 09:25:40 UTC
This bug was referenced in samba v4-15-test:

448f2acdcea4b6c7f3e5b14a9852dfcbe455305f
80e9d89a97baa42f261e75c4f33db84aa79d17bb
0daa3af704218656414d1d941425881345bb1b70
4c89d9169a4173997820e6ad1603bdb30ebfd808
3ded98767d34938c12f2b5d723a41d09391f48ae
0d59b1fb326196c1dd58aeaf69c9f2f89311f761
d3b3aa9e19f3b9b3231d75ae56debce36e84d593
57ffd32d455a4cf573eb886a6bde5ac57741c046
Comment 7 Jule Anger 2021-10-18 09:31:05 UTC
Closing out bug report.

Thanks!
Comment 8 Samba QA Contact 2021-10-27 13:12:05 UTC
This bug was referenced in samba v4-15-stable (Release samba-4.15.1):

448f2acdcea4b6c7f3e5b14a9852dfcbe455305f
80e9d89a97baa42f261e75c4f33db84aa79d17bb
0daa3af704218656414d1d941425881345bb1b70
4c89d9169a4173997820e6ad1603bdb30ebfd808
3ded98767d34938c12f2b5d723a41d09391f48ae
0d59b1fb326196c1dd58aeaf69c9f2f89311f761
d3b3aa9e19f3b9b3231d75ae56debce36e84d593
57ffd32d455a4cf573eb886a6bde5ac57741c046